--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap">
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
     <header>
@@ -68,7 +69,7 @@
             <h3>-</h3>
         </div>
     </div>
-    <nav>
+    <nav id="desktop">
         <div class="content">
             <a href="" class="selected">Progetti</a>
             <a href="">Servizi</a>
@@ -76,11 +77,20 @@
             <a href="">Contatti</a>
         </div>
     </nav>
+    <nav id="mobile">
+        <div class="content">
+            <a href="" class="selected"><i class="fa-solid fa-diagram-project"></i></a>
+            <a href=""><i class="fa-solid fa-computer"></i></a>
+            <a href=""><i class="fa-solid fa-user-tie"></i></a>
+            <a href=""><i class="fa-solid fa-comments"></i></a>
+        </div>
+    </nav>
+    <div class="filler"></div>
     <main>
         <article class="developer-info">
             <h3>Ossas - Lo Sviluppatore Visionario</h3>
             <h4>Progetti Innovativi e Soluzioni Creative</h4>
-            <p>Ossas è uno sviluppatore talent <br><br><br><br><br><br><br><br><br><br><br>uoso che ha lasciato il segno nel mondo della tecnologia con una serie di progetti rivoluzionari. Tra i suoi lavori più conosciuti troviamo <strong>Classmap</strong>, <strong>SchoolSync</strong> e molti altri strumenti che hanno trasformato il modo in cui la tecnologia viene utilizzata nel campo educativo e aziendale.</p>
+            <p>Ossas è uno sviluppatore talentuoso che ha lasciato il segno nel mondo della tecnologia con una serie di progetti rivoluzionari. Tra i suoi lavori più conosciuti troviamo <strong>Classmap</strong>, <strong>SchoolSync</strong> e molti altri strumenti che hanno trasformato il modo in cui la tecnologia viene utilizzata nel campo educativo e aziendale.</p>
         
             <img src="img/ossas_logo_text_16-9.png">
         
