builds and links

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
+    <!--header-->
     <header>
         <div class="container">
             <img src="img/ossas_logo_trasparent.png">
@@ -25,6 +26,7 @@
             </div>
         </div>
     </header>
+    <!--separa-->
     <div class="separa">
         <div class="scroll-text">
             <h3>WebSite Developer </h3>
@@ -77,6 +79,7 @@
             <h3>-</h3>
         </div>
     </div>
+    <!--nav desktop-->
     <nav id="desktop">
         <div class="content">
             <p href="" class="nav-1 selected" onclick="section(1)">Progetti</p>
@@ -85,6 +88,7 @@
             <p href="" class="nav-4" onclick="section(4)">Contatti</p>
         </div>
     </nav>
+    <!--nav mobile-->
     <nav id="mobile">
         <div class="content">
             <p href="" class="nav-1 selected" onclick="section(1)"><i class="fa-solid fa-diagram-project"></i></p>
@@ -94,6 +98,7 @@
         </div>
     </nav>
     <div class="filler"></div>
+    <!--projects-->
     <main id="section-1" class="online">
         <article>
             <h3 class="developer-info">Ossas - Lo Sviluppatore Visionario</h3>
@@ -117,6 +122,7 @@
             </div>
         </article>        
     </main>
+    <!--builds-->
     <main id="section-2">
         <article>
             <h3 class="developer-info">Ossas - Dettaglio delle Build PC</h3>
@@ -185,6 +191,7 @@
             </div>
         </article>                   
     </main>    
+    <!--portfolio-->
     <main id="section-3">
         <article>
             <h3 class="developer-info">Ossas - Portfolio Professionale</h3>
@@ -242,7 +249,8 @@
                 <p>Tutti i miei clienti descrivono il mio lavoro come “affidabile, di alta qualità e rapido”, apprezzando la mia dedizione e il mio approccio professionale.</p>    
             </div>
         </article>              
-    </main>    
+    </main>   
+    <!--contact--> 
     <main id="section-4">
         <article>
             <h3 class="developer-info">Contatti - Ossas</h3>
@@ -272,14 +280,15 @@
             </div>     
         </article>              
     </main>
+    <!--footer-->
     <footer>
         <div class="developer-info">
             <div class="logos">
                 <a href="https://nt-ossas.github.io"><img src="img/TECHZONE_logo.png" style="box-shadow: 0 0 0;"></a>
-                <a href="https://nt-ossas.github.io"><img src="img/schoolsync_logo_500.png"></a>
-                <a href="https://nt-ossas.github.io"><img src="img/classmap.png"></a>
-                <a href="https://nt-ossas.github.io"><img src="img/guess.png"></a>
-                <a href="https://nt-ossas.github.io"><img src="img/suw.png"></a>
+                <a href="https://nt-ossas.github.io/schoolsync"><img src="img/schoolsync_logo_500.png"></a>
+                <a href="https://nt-ossas.github.io/schoolsync/html/classmap"><img src="img/classmap.png"></a>
+                <a href="https://nt-ossas.github.io/guess"><img src="img/guess.png"></a>
+                <a href="https://nt-ossas.github.io/gym"><img src="img/suw.png"></a>
             </div>
             <h4 class="tag">2024 WebSite&copy; - All Rights Reserved - Ossas PortFolio</h4>
         </div>
