--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <img src="img/ossas_logo_trasparent.png">
             <div class="content">
-                <h1>scritta</h1>
+                <h1>Ossas</h1>
             </div>
         </div>
     </header>
